# agent-manager

./: .dockerignore  .editorconfig  Caddyfile  Cargo.toml  Makefile  README.md  ROADMAP.txt  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile.dev  rust_poem.txt  test_message.txt
backend/bridge/: gemini-bridge.js  package-lock.json  package.json  test-bridge.js  test-bridge.sh
backend/migrations/: 001_create_chats.sql
backend/prompts/: general-assistant.md
backend/src/: config.rs  error.rs  lib.rs  main.rs  websocket.rs
backend/src/api/: agents.rs  chat.rs  files.rs  handlers.rs  mod.rs  orchestrator.rs  orchestrator_graph.rs  queries.rs  simple_chat.rs  simple_chat_multipart.rs  streaming.rs  utils.rs
backend/src/chat/: bridge_manager.rs  bridge_session.rs  db.rs  mod.rs  models.rs
backend/src/executor/: cli.rs  error.rs  mod.rs  streaming.rs
backend/src/orchestrator/: api_client.rs  config.rs  constants.rs  gemini_types.rs  graph_executor.rs  graph_flow_adapter.rs  mod.rs  plan_optimizer.rs  plan_to_graph.rs  plan_types.rs  plan_utils.rs  primitives.rs  tasks.rs  utils.rs
backend/src/services/: files.rs  mod.rs
backend/src/state/: app_state.rs  config.rs  mod.rs  persistence.rs
backend/tests/: bridge_json_protocol_test.rs  bridge_session_test.rs  orchestrator_integration_test.rs
docs/: CODE_REVIEW.md  CONTEXT_MANAGEMENT.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_TOOLING.md  HOVER_SCROLL_ISSUES.txt  IMPROVEMENTS.md  NEXT_STEPS.md  ONE_PROCESS_PER_CHAT_ARCHITECTURE.md  QUICKSTART.md  ROADMAP.txt  (+10 more)
(+53 files in other folders)
