[package]
name = "agent-manager-backend"
version = "0.1.0"
edition = "2021"
default-run = "agent-manager-backend"

[lints.rust]
# Enable clippy lints
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
missing_docs = "warn"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["sink"] }
async-stream = "0.3"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "test_gemini"
path = "src/bin/test_gemini.rs"

